Projeto/final1/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> program_heading ; block .
Rule 2     program_heading -> PROGRAM ID ( id_list )
Rule 3     program_heading -> PROGRAM ID
Rule 4     block -> const_part procfunc_part var_part compound_statement
Rule 5     const_part -> <empty>
Rule 6     const_part -> CONST const_list
Rule 7     const_list -> const_def ;
Rule 8     const_list -> const_list const_def ;
Rule 9     const_def -> ID = constant
Rule 10    constant -> sign INT
Rule 11    constant -> INT
Rule 12    constant -> sign REAL
Rule 13    constant -> REAL
Rule 14    constant -> CHAR
Rule 15    constant -> STRING
Rule 16    constant -> ID
Rule 17    sign -> +
Rule 18    sign -> -
Rule 19    var_part -> <empty>
Rule 20    var_part -> VAR var_list
Rule 21    var_list -> var_dec ;
Rule 22    var_list -> var_list var_dec ;
Rule 23    var_dec -> id_list : tipo
Rule 24    id_list -> ID
Rule 25    id_list -> ID , id_list
Rule 26    tipo -> ID
Rule 27    tipo -> new_type
Rule 28    new_type -> enumerated_type
Rule 29    new_type -> subrange_type
Rule 30    new_type -> array_type
Rule 31    enumerated_type -> ( id_list )
Rule 32    subrange_type -> constant DOTDOT constant
Rule 33    array_type -> ARRAY [ ordinal_type_list ] OF tipo
Rule 34    ordinal_type -> enumerated_type
Rule 35    ordinal_type -> subrange_type
Rule 36    ordinal_type -> ID
Rule 37    ordinal_type_list -> ordinal_type
Rule 38    ordinal_type_list -> ordinal_type_list , ordinal_type
Rule 39    procfunc_part -> <empty>
Rule 40    procfunc_part -> procfunc_part proc_dec
Rule 41    procfunc_part -> procfunc_part func_dec
Rule 42    proc_dec -> proc_heading ; block ;
Rule 43    func_dec -> func_heading ; block ;
Rule 44    proc_heading -> PROCEDURE ID
Rule 45    proc_heading -> PROCEDURE ID ( param_list )
Rule 46    func_heading -> FUNCTION ID : ID
Rule 47    func_heading -> FUNCTION ID ( param_list ) : ID
Rule 48    param_list -> param
Rule 49    param_list -> param_list ; param
Rule 50    param -> id_list : ID
Rule 51    param -> VAR id_list : ID
Rule 52    var_access -> ID var_suffix
Rule 53    var_suffix -> <empty>
Rule 54    var_suffix -> [ expr_list ] var_suffix
Rule 55    expr_list -> expr
Rule 56    expr_list -> expr_list , expr
Rule 57    expr -> simple_expr
Rule 58    expr -> simple_expr relation_op simple_expr
Rule 59    simple_expr -> term term_sequence
Rule 60    simple_expr -> sign term term_sequence
Rule 61    term -> factor factor_sequence
Rule 62    term_sequence -> <empty>
Rule 63    term_sequence -> add_op term term_sequence
Rule 64    factor_sequence -> <empty>
Rule 65    factor_sequence -> mul_op factor factor_sequence
Rule 66    factor -> var_access
Rule 67    factor -> INT
Rule 68    factor -> REAL
Rule 69    factor -> CHAR
Rule 70    factor -> STRING
Rule 71    factor -> ID ( expr_list )
Rule 72    factor -> ( expr )
Rule 73    factor -> NOT factor
Rule 74    add_op -> +
Rule 75    add_op -> -
Rule 76    add_op -> OR
Rule 77    mul_op -> *
Rule 78    mul_op -> /
Rule 79    mul_op -> DIV
Rule 80    mul_op -> MOD
Rule 81    mul_op -> AND
Rule 82    relation_op -> =
Rule 83    relation_op -> NE
Rule 84    relation_op -> LT
Rule 85    relation_op -> GT
Rule 86    relation_op -> LE
Rule 87    relation_op -> GE
Rule 88    compound_statement -> BEGIN statement_list END
Rule 89    statement_list -> statement
Rule 90    statement_list -> statement_list ; statement
Rule 91    statement -> <empty>
Rule 92    statement -> assignment_statement
Rule 93    statement -> proc_statement
Rule 94    statement -> read_statement
Rule 95    statement -> write_statement
Rule 96    statement -> labeled_statement
Rule 97    statement -> compound_statement
Rule 98    statement -> if_statement
Rule 99    statement -> while_statement
Rule 100   statement -> for_statement
Rule 101   assignment_statement -> var_access ASSIGN expr
Rule 102   proc_statement -> ID
Rule 103   proc_statement -> ID ( expr_list )
Rule 104   labeled_statement -> INT : statement
Rule 105   read_statement -> READ ( var_access_list )
Rule 106   read_statement -> READLN
Rule 107   read_statement -> READLN ( var_access_list )
Rule 108   var_access_list -> var_access
Rule 109   var_access_list -> var_access_list , var_access
Rule 110   write_statement -> WRITE ( write_list )
Rule 111   write_statement -> WRITELN
Rule 112   write_statement -> WRITELN ( write_list )
Rule 113   write_list -> write_param
Rule 114   write_list -> write_list , write_param
Rule 115   write_param -> expr
Rule 116   write_param -> expr : expr
Rule 117   write_param -> expr : expr : expr
Rule 118   if_statement -> IF expr THEN statement
Rule 119   if_statement -> IF expr THEN statement ELSE statement
Rule 120   while_statement -> WHILE expr DO statement
Rule 121   for_statement -> FOR ID ASSIGN expr TO expr DO statement
Rule 122   for_statement -> FOR ID ASSIGN expr DOWNTO expr DO statement

Terminals, with rules where they appear

(                    : 2 31 45 47 71 72 103 105 107 110 112
)                    : 2 31 45 47 71 72 103 105 107 110 112
*                    : 77
+                    : 17 74
,                    : 25 38 56 109 114
-                    : 18 75
.                    : 1
/                    : 78
:                    : 23 46 47 50 51 104 116 117 117
;                    : 1 7 8 21 22 42 42 43 43 49 90
=                    : 9 82
AND                  : 81
ARRAY                : 33
ASSIGN               : 101 121 122
BEGIN                : 88
CHAR                 : 14 69
CONST                : 6
DIV                  : 79
DO                   : 120 121 122
DOTDOT               : 32
DOWNTO               : 122
ELSE                 : 119
END                  : 88
FOR                  : 121 122
FUNCTION             : 46 47
GE                   : 87
GT                   : 85
ID                   : 2 3 9 16 24 25 26 36 44 45 46 46 47 47 50 51 52 71 102 103 121 122
IF                   : 118 119
INT                  : 10 11 67 104
LE                   : 86
LT                   : 84
MOD                  : 80
NE                   : 83
NOT                  : 73
OF                   : 33
OR                   : 76
PROCEDURE            : 44 45
PROGRAM              : 2 3
READ                 : 105
READLN               : 106 107
REAL                 : 12 13 68
STRING               : 15 70
THEN                 : 118 119
TO                   : 121
VAR                  : 20 51
WHILE                : 120
WRITE                : 110
WRITELN              : 111 112
[                    : 33 54
]                    : 33 54
error                : 

Nonterminals, with rules where they appear

add_op               : 63
array_type           : 30
assignment_statement : 92
block                : 1 42 43
compound_statement   : 4 97
const_def            : 7 8
const_list           : 6 8
const_part           : 4
constant             : 9 32 32
enumerated_type      : 28 34
expr                 : 55 56 72 101 115 116 116 117 117 117 118 119 120 121 121 122 122
expr_list            : 54 56 71 103
factor               : 61 65 73
factor_sequence      : 61 65
for_statement        : 100
func_dec             : 41
func_heading         : 43
id_list              : 2 23 25 31 50 51
if_statement         : 98
labeled_statement    : 96
mul_op               : 65
new_type             : 27
ordinal_type         : 37 38
ordinal_type_list    : 33 38
param                : 48 49
param_list           : 45 47 49
proc_dec             : 40
proc_heading         : 42
proc_statement       : 93
procfunc_part        : 4 40 41
program              : 0
program_heading      : 1
read_statement       : 94
relation_op          : 58
sign                 : 10 12 60
simple_expr          : 57 58 58
statement            : 89 90 104 118 119 119 120 121 122
statement_list       : 88 90
subrange_type        : 29 35
term                 : 59 60 63
term_sequence        : 59 60 63
tipo                 : 23 33
var_access           : 66 101 108 109
var_access_list      : 105 107 109
var_dec              : 21 22
var_list             : 20 22
var_part             : 4
var_suffix           : 52 54
while_statement      : 99
write_list           : 110 112 114
write_param          : 113 114
write_statement      : 95

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . program_heading ; block .
    (2) program_heading -> . PROGRAM ID ( id_list )
    (3) program_heading -> . PROGRAM ID

    PROGRAM         shift and go to state 3

    program                        shift and go to state 1
    program_heading                shift and go to state 2

state 1

    (0) S' -> program .



state 2

    (1) program -> program_heading . ; block .

    ;               shift and go to state 4


state 3

    (2) program_heading -> PROGRAM . ID ( id_list )
    (3) program_heading -> PROGRAM . ID

    ID              shift and go to state 5


state 4

    (1) program -> program_heading ; . block .
    (4) block -> . const_part procfunc_part var_part compound_statement
    (5) const_part -> .
    (6) const_part -> . CONST const_list

    VAR             reduce using rule 5 (const_part -> .)
    PROCEDURE       reduce using rule 5 (const_part -> .)
    FUNCTION        reduce using rule 5 (const_part -> .)
    BEGIN           reduce using rule 5 (const_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 6
    const_part                     shift and go to state 7

state 5

    (2) program_heading -> PROGRAM ID . ( id_list )
    (3) program_heading -> PROGRAM ID .

    (               shift and go to state 9
    ;               reduce using rule 3 (program_heading -> PROGRAM ID .)


state 6

    (1) program -> program_heading ; block . .

    .               shift and go to state 10


state 7

    (4) block -> const_part . procfunc_part var_part compound_statement
    (39) procfunc_part -> .
    (40) procfunc_part -> . procfunc_part proc_dec
    (41) procfunc_part -> . procfunc_part func_dec

    VAR             reduce using rule 39 (procfunc_part -> .)
    PROCEDURE       reduce using rule 39 (procfunc_part -> .)
    FUNCTION        reduce using rule 39 (procfunc_part -> .)
    BEGIN           reduce using rule 39 (procfunc_part -> .)

    procfunc_part                  shift and go to state 11

state 8

    (6) const_part -> CONST . const_list
    (7) const_list -> . const_def ;
    (8) const_list -> . const_list const_def ;
    (9) const_def -> . ID = constant

    ID              shift and go to state 14

    const_list                     shift and go to state 12
    const_def                      shift and go to state 13

state 9

    (2) program_heading -> PROGRAM ID ( . id_list )
    (24) id_list -> . ID
    (25) id_list -> . ID , id_list

    ID              shift and go to state 15

    id_list                        shift and go to state 16

state 10

    (1) program -> program_heading ; block . .

    $end            reduce using rule 1 (program -> program_heading ; block . .)


state 11

    (4) block -> const_part procfunc_part . var_part compound_statement
    (40) procfunc_part -> procfunc_part . proc_dec
    (41) procfunc_part -> procfunc_part . func_dec
    (19) var_part -> .
    (20) var_part -> . VAR var_list
    (42) proc_dec -> . proc_heading ; block ;
    (43) func_dec -> . func_heading ; block ;
    (44) proc_heading -> . PROCEDURE ID
    (45) proc_heading -> . PROCEDURE ID ( param_list )
    (46) func_heading -> . FUNCTION ID : ID
    (47) func_heading -> . FUNCTION ID ( param_list ) : ID

    BEGIN           reduce using rule 19 (var_part -> .)
    VAR             shift and go to state 20
    PROCEDURE       shift and go to state 23
    FUNCTION        shift and go to state 24

    var_part                       shift and go to state 17
    proc_dec                       shift and go to state 18
    func_dec                       shift and go to state 19
    proc_heading                   shift and go to state 21
    func_heading                   shift and go to state 22

state 12

    (6) const_part -> CONST const_list .
    (8) const_list -> const_list . const_def ;
    (9) const_def -> . ID = constant

    VAR             reduce using rule 6 (const_part -> CONST const_list .)
    PROCEDURE       reduce using rule 6 (const_part -> CONST const_list .)
    FUNCTION        reduce using rule 6 (const_part -> CONST const_list .)
    BEGIN           reduce using rule 6 (const_part -> CONST const_list .)
    ID              shift and go to state 14

    const_def                      shift and go to state 25

state 13

    (7) const_list -> const_def . ;

    ;               shift and go to state 26


state 14

    (9) const_def -> ID . = constant

    =               shift and go to state 27


state 15

    (24) id_list -> ID .
    (25) id_list -> ID . , id_list

    )               reduce using rule 24 (id_list -> ID .)
    :               reduce using rule 24 (id_list -> ID .)
    ,               shift and go to state 28


state 16

    (2) program_heading -> PROGRAM ID ( id_list . )

    )               shift and go to state 29


state 17

    (4) block -> const_part procfunc_part var_part . compound_statement
    (88) compound_statement -> . BEGIN statement_list END

    BEGIN           shift and go to state 31

    compound_statement             shift and go to state 30

state 18

    (40) procfunc_part -> procfunc_part proc_dec .

    VAR             reduce using rule 40 (procfunc_part -> procfunc_part proc_dec .)
    PROCEDURE       reduce using rule 40 (procfunc_part -> procfunc_part proc_dec .)
    FUNCTION        reduce using rule 40 (procfunc_part -> procfunc_part proc_dec .)
    BEGIN           reduce using rule 40 (procfunc_part -> procfunc_part proc_dec .)


state 19

    (41) procfunc_part -> procfunc_part func_dec .

    VAR             reduce using rule 41 (procfunc_part -> procfunc_part func_dec .)
    PROCEDURE       reduce using rule 41 (procfunc_part -> procfunc_part func_dec .)
    FUNCTION        reduce using rule 41 (procfunc_part -> procfunc_part func_dec .)
    BEGIN           reduce using rule 41 (procfunc_part -> procfunc_part func_dec .)


state 20

    (20) var_part -> VAR . var_list
    (21) var_list -> . var_dec ;
    (22) var_list -> . var_list var_dec ;
    (23) var_dec -> . id_list : tipo
    (24) id_list -> . ID
    (25) id_list -> . ID , id_list

    ID              shift and go to state 15

    var_list                       shift and go to state 32
    var_dec                        shift and go to state 33
    id_list                        shift and go to state 34

state 21

    (42) proc_dec -> proc_heading . ; block ;

    ;               shift and go to state 35


state 22

    (43) func_dec -> func_heading . ; block ;

    ;               shift and go to state 36


state 23

    (44) proc_heading -> PROCEDURE . ID
    (45) proc_heading -> PROCEDURE . ID ( param_list )

    ID              shift and go to state 37


state 24

    (46) func_heading -> FUNCTION . ID : ID
    (47) func_heading -> FUNCTION . ID ( param_list ) : ID

    ID              shift and go to state 38


state 25

    (8) const_list -> const_list const_def . ;

    ;               shift and go to state 39


state 26

    (7) const_list -> const_def ; .

    ID              reduce using rule 7 (const_list -> const_def ; .)
    VAR             reduce using rule 7 (const_list -> const_def ; .)
    PROCEDURE       reduce using rule 7 (const_list -> const_def ; .)
    FUNCTION        reduce using rule 7 (const_list -> const_def ; .)
    BEGIN           reduce using rule 7 (const_list -> const_def ; .)


state 27

    (9) const_def -> ID = . constant
    (10) constant -> . sign INT
    (11) constant -> . INT
    (12) constant -> . sign REAL
    (13) constant -> . REAL
    (14) constant -> . CHAR
    (15) constant -> . STRING
    (16) constant -> . ID
    (17) sign -> . +
    (18) sign -> . -

    INT             shift and go to state 43
    REAL            shift and go to state 44
    CHAR            shift and go to state 45
    STRING          shift and go to state 46
    ID              shift and go to state 40
    +               shift and go to state 47
    -               shift and go to state 48

    constant                       shift and go to state 41
    sign                           shift and go to state 42

state 28

    (25) id_list -> ID , . id_list
    (24) id_list -> . ID
    (25) id_list -> . ID , id_list

    ID              shift and go to state 15

    id_list                        shift and go to state 49

state 29

    (2) program_heading -> PROGRAM ID ( id_list ) .

    ;               reduce using rule 2 (program_heading -> PROGRAM ID ( id_list ) .)


state 30

    (4) block -> const_part procfunc_part var_part compound_statement .

    .               reduce using rule 4 (block -> const_part procfunc_part var_part compound_statement .)
    ;               reduce using rule 4 (block -> const_part procfunc_part var_part compound_statement .)


state 31

    (88) compound_statement -> BEGIN . statement_list END
    (89) statement_list -> . statement
    (90) statement_list -> . statement_list ; statement
    (91) statement -> .
    (92) statement -> . assignment_statement
    (93) statement -> . proc_statement
    (94) statement -> . read_statement
    (95) statement -> . write_statement
    (96) statement -> . labeled_statement
    (97) statement -> . compound_statement
    (98) statement -> . if_statement
    (99) statement -> . while_statement
    (100) statement -> . for_statement
    (101) assignment_statement -> . var_access ASSIGN expr
    (102) proc_statement -> . ID
    (103) proc_statement -> . ID ( expr_list )
    (105) read_statement -> . READ ( var_access_list )
    (106) read_statement -> . READLN
    (107) read_statement -> . READLN ( var_access_list )
    (110) write_statement -> . WRITE ( write_list )
    (111) write_statement -> . WRITELN
    (112) write_statement -> . WRITELN ( write_list )
    (104) labeled_statement -> . INT : statement
    (88) compound_statement -> . BEGIN statement_list END
    (118) if_statement -> . IF expr THEN statement
    (119) if_statement -> . IF expr THEN statement ELSE statement
    (120) while_statement -> . WHILE expr DO statement
    (121) for_statement -> . FOR ID ASSIGN expr TO expr DO statement
    (122) for_statement -> . FOR ID ASSIGN expr DOWNTO expr DO statement
    (52) var_access -> . ID var_suffix

    END             reduce using rule 91 (statement -> .)
    ;               reduce using rule 91 (statement -> .)
    ID              shift and go to state 62
    READ            shift and go to state 63
    READLN          shift and go to state 64
    WRITE           shift and go to state 65
    WRITELN         shift and go to state 66
    INT             shift and go to state 67
    BEGIN           shift and go to state 31
    IF              shift and go to state 68
    WHILE           shift and go to state 69
    FOR             shift and go to state 70

    statement_list                 shift and go to state 50
    statement                      shift and go to state 51
    assignment_statement           shift and go to state 52
    proc_statement                 shift and go to state 53
    read_statement                 shift and go to state 54
    write_statement                shift and go to state 55
    labeled_statement              shift and go to state 56
    compound_statement             shift and go to state 57
    if_statement                   shift and go to state 58
    while_statement                shift and go to state 59
    for_statement                  shift and go to state 60
    var_access                     shift and go to state 61

state 32

    (20) var_part -> VAR var_list .
    (22) var_list -> var_list . var_dec ;
    (23) var_dec -> . id_list : tipo
    (24) id_list -> . ID
    (25) id_list -> . ID , id_list

    BEGIN           reduce using rule 20 (var_part -> VAR var_list .)
    ID              shift and go to state 15

    var_dec                        shift and go to state 71
    id_list                        shift and go to state 34

state 33

    (21) var_list -> var_dec . ;

    ;               shift and go to state 72


state 34

    (23) var_dec -> id_list . : tipo

    :               shift and go to state 73


state 35

    (42) proc_dec -> proc_heading ; . block ;
    (4) block -> . const_part procfunc_part var_part compound_statement
    (5) const_part -> .
    (6) const_part -> . CONST const_list

    VAR             reduce using rule 5 (const_part -> .)
    PROCEDURE       reduce using rule 5 (const_part -> .)
    FUNCTION        reduce using rule 5 (const_part -> .)
    BEGIN           reduce using rule 5 (const_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 74
    const_part                     shift and go to state 7

state 36

    (43) func_dec -> func_heading ; . block ;
    (4) block -> . const_part procfunc_part var_part compound_statement
    (5) const_part -> .
    (6) const_part -> . CONST const_list

    VAR             reduce using rule 5 (const_part -> .)
    PROCEDURE       reduce using rule 5 (const_part -> .)
    FUNCTION        reduce using rule 5 (const_part -> .)
    BEGIN           reduce using rule 5 (const_part -> .)
    CONST           shift and go to state 8

    block                          shift and go to state 75
    const_part                     shift and go to state 7

state 37

    (44) proc_heading -> PROCEDURE ID .
    (45) proc_heading -> PROCEDURE ID . ( param_list )

    ;               reduce using rule 44 (proc_heading -> PROCEDURE ID .)
    (               shift and go to state 76


state 38

    (46) func_heading -> FUNCTION ID . : ID
    (47) func_heading -> FUNCTION ID . ( param_list ) : ID

    :               shift and go to state 77
    (               shift and go to state 78


state 39

    (8) const_list -> const_list const_def ; .

    ID              reduce using rule 8 (const_list -> const_list const_def ; .)
    VAR             reduce using rule 8 (const_list -> const_list const_def ; .)
    PROCEDURE       reduce using rule 8 (const_list -> const_list const_def ; .)
    FUNCTION        reduce using rule 8 (const_list -> const_list const_def ; .)
    BEGIN           reduce using rule 8 (const_list -> const_list const_def ; .)


state 40

    (16) constant -> ID .

    ;               reduce using rule 16 (constant -> ID .)
    ]               reduce using rule 16 (constant -> ID .)
    ,               reduce using rule 16 (constant -> ID .)


state 41

    (9) const_def -> ID = constant .

    ;               reduce using rule 9 (const_def -> ID = constant .)


state 42

    (10) constant -> sign . INT
    (12) constant -> sign . REAL

    INT             shift and go to state 79
    REAL            shift and go to state 80


state 43

    (11) constant -> INT .

    ;               reduce using rule 11 (constant -> INT .)
    DOTDOT          reduce using rule 11 (constant -> INT .)
    ]               reduce using rule 11 (constant -> INT .)
    ,               reduce using rule 11 (constant -> INT .)


state 44

    (13) constant -> REAL .

    ;               reduce using rule 13 (constant -> REAL .)
    DOTDOT          reduce using rule 13 (constant -> REAL .)
    ]               reduce using rule 13 (constant -> REAL .)
    ,               reduce using rule 13 (constant -> REAL .)


state 45

    (14) constant -> CHAR .

    ;               reduce using rule 14 (constant -> CHAR .)
    DOTDOT          reduce using rule 14 (constant -> CHAR .)
    ]               reduce using rule 14 (constant -> CHAR .)
    ,               reduce using rule 14 (constant -> CHAR .)


state 46

    (15) constant -> STRING .

    ;               reduce using rule 15 (constant -> STRING .)
    DOTDOT          reduce using rule 15 (constant -> STRING .)
    ]               reduce using rule 15 (constant -> STRING .)
    ,               reduce using rule 15 (constant -> STRING .)


state 47

    (17) sign -> + .
